--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="email in emails">
+            <li v-for="email in emails"  v-if="emails.length === 10">
                 {{email}}
             </li>
         </ul>
